# skmediate

./: .coveragerc  .flake8  .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: docbuild.yml  test.yml
docker/: README.md
docs/: api.rst  conf.py  contributing.rst  index.rst  quick_start.rst  user_guide.rst
docs/tutorials/: Example - Simulate Mediation Models.ipynb  Introduction to Mediation.ipynb
examples/: plot_example.py  plot_simulation_example.py
skmediate/: __init__.py  __main__.py  conditional_independence.py  datasets.py
skmediate/tests/: test_conditional_independence.py  test_datasets.py
tests/test_example/: test_hello.py
