[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
# Directories that are not visited by pytest collector:
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
doctest_optionflags = NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[metadata]
name = skmediate
url = https://skmediate.github.io/skmediate
download_url = https://github.com/skmediate/skmediate
author = Manjari Narayan
author_email =
maintainer = Manjari Narayan
maintainer_email = richiehalford@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = skmediate: mediation analysis
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
install_requires =
    ipywidgets==7.5.1
    matplotlib==3.3.0
    numpy==1.19.1
    scikit-learn==0.23.2
    scipy==1.5.2
    tqdm==4.48.2
    pandas
    statsmodels
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black==20.8b1
    flake8==3.8.3
    numpydoc==1.1.0
    pre-commit==2.7.1
    pydocstyle==5.1.1
    pytest-cov==2.10.1
    pytest-xdist[psutil]==2.1.0
    pytest==6.0.1
    sphinx==3.2.1
    sphinx-gallery==0.8.1
    sphinx-rtd-theme==0.5.0
maint =
    rapidfuzz==0.12.2

[pydocstyle]
convention = numpy
match-dir = skmediate

# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html

[darglint]
# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = google

[mypy]
# mypy configurations: http://bit.ly/2zEl9WI
python_version = 3.7
pretty = True
allow_redefinition = False
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_return_any = True
warn_unreachable = True
show_error_codes = True
show_column_numbers = True
show_error_context = True

# plugins = pydantic.mypy, sqlmypy

# [pydantic-mypy]
# init_typed = True
# warn_untyped_fields = True

# Extra options:
addopts =
  --strict
  --tb=short
  --doctest-modules
  --doctest-continue-on-failure
